17/12/2011

Modified stout launcher to follow same process as stic launcher.
Added List of Classes to be adopted and implemented.
Started List of protocol for each of these classes that needs to
be implemented.

16/12/2011

Modified HelloWorld example to be just hello world, and moved assert example into 
AssertExample.st

15/12/2011

Revamped the *nix version of stic. Enables use of Redline from anywhere on your machine.
Just 'install', export REDLINE_HOME and add REDLINE_HOME/bin to your path.

14/12/2011

Added support of non-local returns for blocks with ^ in them.
Fixing path separator bug in Maven pom that affects Windows hosts.

11/12/2011

Adding detection of blocks with ^ returns in them.

10/12/2011 

Added support for nested nested blocks.

09/12/2011

Added BlockAnalyser delegate to cater for nest block parsing correctly.
Added stack of block analysers to handle nested, nested blocks.

05/12/2011

Added method to block node to know if it contains an answer expression. Start
of work to support ^ from blocks.

04/12/2011

Fixed a bug with nested blocks.
Initialize temporaries to nil (UndefinedObject).
Added some required methods to Object and UndefinedObject.

03/12/2011

Fixed bug with tightly nested blocks.
Removed some extra output.

01/12/2011

Added -e options to command line. There is a bug in getting options with quotes in them.
Fixing a.s.a.p

27/11/2011

Modified whileTrue/whileFalse support to ensure block yield responds to ifTrue:/ifFalse:

26/11/2011

Added support for nexted expressions, ie: (expression).
Added primitive support for [] whileNil: and whileNotNil:.
Added support for dispath in Stout.
Changed call from INVOKEVIRTUAL to INVOKEINTERFACE. NoOp router being called.
Added routing support for Stout. Can now invoke blocks based on route.
Add [] whileTrue/whileFalse support
Fixed variable registration to not try and register "" as a variable
Added a simple test runner to the integration-test phase of Maven