@@ -3,3 +3,5 @@
 Transcript show: $X; cr.
 
 char := Character value: 65.
+
+Transcript show: 'found character: '; show: char; cr.
